Исправлены методы advanced
Теперь будет полностью правильная кодировка и расшифровка на любой версии алфавита. Это сделано за счёт "ссужения" алфавитов путём уборки дубликатов букв которые возникали в процессе постройки алфавита, что сделало алфавит хоть и меньше (184 по сравнению с 236) Но зато нормально дешифруемым